# N2O-pred-g3p

./: .gitignore  CLAUDE.md  README.md  check_duplicate_days.py  check_duplicate_samples.py  pred.sh  pred1.sh  pred2.sh  pred3.sh  pred4.sh  pred5.sh  pred6.sh  pred7.sh  pred8.sh  pred_train.sh  pyproject.toml  stats.sh
docs/: feature-processing-summary.md  research-plan.md
preprocessor/: encoders.pkl
src/n2o_pred/: cli.py  compare.py  dataset.py  evaluation.py  experiment.py  predict.py  preprocessing.py  regenerate_predictions.py  rf.py  rnn.py  trainer.py  utils.py
utils/: ensemble_tif.py  recalculate_r2.py  test_all.sh
